feat(devops): Настроить и оптимизировать Docker-окружение

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,22 +1,42 @@
-FROM node:20-slim AS base
+ARG NODE_IMAGE=node:20-slim
+
+# 1. Base Stage
+FROM ${NODE_IMAGE} AS base
 RUN npm install -g pnpm
+WORKDIR /app
 
-FROM base AS deps
-WORKDIR /usr/src/app
-RUN --mount=type=bind,source=package.json,target=package.json \
-    --mount=type=bind,source=pnpm-lock.yaml,target=pnpm-lock.yaml \
-    --mount=type=cache,target=/root/.local/share/pnpm/store \
-    pnpm fetch --prod
+# 2. Production Dependencies Stage
+FROM base AS prod-deps
+COPY pnpm-lock.yaml pnpm-workspace.yaml ./
+COPY client/package.json ./client/
+COPY server/package.json ./server/
+RUN pnpm install --filter backend --prod --frozen-lockfile
 
-FROM base AS build
-WORKDIR /usr/src/app
-COPY --from=deps /usr/src/app/node_modules /usr/src/app/node_modules
-COPY . .
-RUN pnpm install --prod --offline
-RUN pnpm run build
+# 3. Build Stage
+FROM base AS builder
+COPY pnpm-lock.yaml pnpm-workspace.yaml ./
+COPY client/package.json ./client/
+COPY server/package.json ./server/
+# Install all dependencies (including dev)
+RUN pnpm install --filter backend --frozen-lockfile
+# Copy source code
+COPY server/ ./server/
+# Build the application
+RUN pnpm --filter backend build
 
-FROM base AS production
-WORKDIR /usr/src/app
-COPY --from=build /usr/src/app/node_modules /usr/src/app/node_modules
-COPY --from=build /usr/src/app/dist /usr/src/app/dist
+# 4. Runner Stage (Final)
+FROM ${NODE_IMAGE} AS runner
+WORKDIR /app
+ENV NODE_ENV=production
+
+# Create and use a non-root user for security
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nodejs
+USER nodejs
+
+# Copy production dependencies and build artifacts
+COPY --from=prod-deps --chown=nodejs:nodejs /app/node_modules ./node_modules
+COPY --from=builder --chown=nodejs:nodejs /app/server/dist ./dist
+
+EXPOSE 3000
 CMD ["node", "dist/main.js"]
