--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: server/Dockerfile
     ports:
       - "3000:3000"
     environment:
@@ -17,10 +17,13 @@ services:
 
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: client/Dockerfile
     ports:
       - "80:80"
+      - "443:443"
+    # volumes:
+      # - /path/to/your/letsencrypt:/etc/letsencrypt
 
   postgres:
     image: postgres:15-alpine
