feat: enable ssl for nginx

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -13,12 +13,11 @@ server {
     server_name backgammon.ruble.website;
 
     # --- SSL-сертификаты ---
-    # Укажите пути к вашим сертификатам и раскомментируйте строки ниже
-    # ssl_certificate /etc/letsencrypt/live/backgammon.ruble.website/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/backgammon.ruble.website/privkey.pem;
-    # ssl_protocols TLSv1.2 TLSv1.3;
-    # ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256';
-    # ssl_prefer_server_ciphers off;
+    ssl_certificate /etc/letsencrypt/live/backgammon.ruble.website/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/backgammon.ruble.website/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers off;
 
     # Обслуживание статики фронтенда
     root /usr/share/nginx/html;
