--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "pnpm --parallel run lint",
+    "format": "pnpm --parallel run format",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
