--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,11 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@ton/crypto": "^3.3.0",
     "@tonconnect/sdk": "^3.2.0",
+    "@types/uuid": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "colyseus.js": "^0.16.19",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -38,7 +42,10 @@
     "swagger-ui-express": "^5.0.1",
     "telegraf": "^4.16.3",
     "ton": "^13.9.0",
-    "ton-core": "^0.53.0"
+    "ton-core": "^0.53.0",
+    "tweetnacl": "^1.0.3",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
