--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lint": "^0.8.19",
+    "prop-types": "^15.8.1"
+  }
 }
