--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,9 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@ton/core": "^0.61.0",
     "@ton/crypto": "^3.3.0",
+    "@ton/ton": "^15.3.1",
     "@tonconnect/sdk": "^3.2.0",
     "@types/uuid": "^10.0.0",
     "class-transformer": "^0.5.1",
