--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -28,13 +28,18 @@ server {
     }
 
     # Проксирование API-запросов на бэкенд
-    location /api/ {
-        proxy_pass http://backend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+        location /api {
+            resolver 127.0.0.11 valid=30s; # Docker's built-in DNS resolver
+            set $backend_host backend:3000;
+            proxy_pass http://$backend_host;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 75s; # Increased timeout for backend connection
+            proxy_send_timeout 75s;    # Increased timeout for sending data to backend
+            proxy_read_timeout 75s;    # Increased timeout for reading data from backend
+        }
 
     # Проксирование WebSocket для Colyseus
     location /colyseus/ {
