--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@ services:
     depends_on:
       - postgres
       - redis
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   frontend:
     build:
@@ -25,6 +31,9 @@ services:
     user: root
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
+    depends_on:
+      backend:
+        condition: service_healthy
 
   postgres:
     image: postgres:15-alpine
