--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -27,6 +27,12 @@ server {
         try_files $uri /index.html;
     }
 
+    # Обслуживание статичных ассетов с кешированием
+    location /assets {
+        expires 1y;
+        add_header Cache-Control "public";
+    }
+
     # Проксирование API-запросов на бэкенд
         location /api {
             resolver 127.0.0.11 valid=30s; # Docker's built-in DNS resolver
