--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -18,12 +18,14 @@ COPY . .
 
 # Build the client application
 RUN pnpm --filter backgammon-bet run build
+RUN ls -lR /app/client/dist
 
 # 2. Production Stage
 FROM nginx:1.25-alpine AS production
 
 # Copy built assets from the builder stage
-COPY --from=builder /app/client/dist /usr/share/nginx/html
+COPY --from=builder /app/client/dist/index.html /usr/share/nginx/html/index.html
+COPY --from=builder /app/client/dist/assets /usr/share/nginx/html/assets
 
 # Copy Nginx configuration
 COPY --from=builder /app/client/nginx.conf /etc/nginx/conf.d/default.conf
