--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -29,6 +29,7 @@ server {
 
     # Обслуживание статичных ассетов с кешированием
     location /assets {
+        root /usr/share/nginx/html;
         expires 1y;
         add_header Cache-Control "public";
     }
