--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -25,7 +25,7 @@ FROM nginx:1.25-alpine AS production
 
 # Copy built assets from the builder stage
 COPY --from=builder /app/client/dist/index.html /usr/share/nginx/html/index.html
-COPY --from=builder /app/client/dist/assets /usr/share/nginx/html/assets
+COPY --from=builder /app/client/dist/assets/ /usr/share/nginx/html/assets/
 
 # Copy Nginx configuration
 COPY --from=builder /app/client/nginx.conf /etc/nginx/conf.d/default.conf
