--- a/client/nginx.dev.conf
+++ b/client/nginx.dev.conf
@@ -19,9 +19,7 @@ server {
 
     # Проксирование API-запросов на бэкенд
     location /api {
-        resolver 127.0.0.11 valid=30s; # Docker's built-in DNS resolver
-        set $backend_host backend:3000;
-        proxy_pass http://$backend_host;
+        proxy_pass http://backend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
