--- a/client/nginx.dev.conf
+++ b/client/nginx.dev.conf
@@ -18,8 +18,8 @@ server {
     }
 
     # Проксирование API-запросов на бэкенд
-    location /api {
-        proxy_pass http://backend:3000;
+    location /api/ {
+        proxy_pass http://backend:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
