--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -29,7 +29,7 @@ COPY --from=builder /app/client/dist/index.html /usr/share/nginx/html/index.html
 COPY --from=builder /app/client/dist/assets/ /usr/share/nginx/html/assets/
 
 # Copy Nginx configuration
-COPY --from=builder /app/client/nginx.dev.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/client/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 8001
 EXPOSE 8002
