Revert client to working state from commit 0f8ac86

--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,9 @@
   },
   "dependencies": {
     "@tonconnect/ui-react": "^2.3.0",
-    "buffer": "^6.0.3",
-    "colyseus.js": "^0.16.19",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ton": "^13.9.0",
-    "ton-core": "^0.53.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
