Use server/.env for all services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,8 @@ services:
       dockerfile: server/Dockerfile
     ports:
       - '3001:3000'
-    environment:
-      - DATABASE_URL=postgresql://user:password@postgres:5432/backgammon
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
+    env_file:
+      - server/.env
     depends_on:
       - postgres
       - redis
@@ -37,11 +35,10 @@ services:
 
   postgres:
     image: postgres:15-alpine
-  
     environment:
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=backgammon
+      - POSTGRES_USER=${DB_USERNAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
