--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -35,7 +35,7 @@ server {
     }
 
     # Проксирование API-запросов на бэкенд
-        location /api {
+        location /api/ {
             resolver 127.0.0.11 valid=30s; # Docker's built-in DNS resolver
             set $backend_host backend:3000;
             proxy_pass http://$backend_host;
@@ -43,23 +43,15 @@ server {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_connect_timeout 75s; # Increased timeout for backend connection
-            proxy_send_timeout 75s;    # Increased timeout for sending data to backend
-            proxy_read_timeout 75s;    # Increased timeout for reading data from backend
-        }
+            proxy_connect_timeout 75s;
+            proxy_send_timeout 75s;
+            proxy_read_timeout 86400s; # Long timeout for WebSocket
 
-    # Проксирование WebSocket для Colyseus
-    location /colyseus/ {
-        proxy_pass http://backend:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_read_timeout 86400; # Держать соединение открытым
-    }
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
 
     # Обслуживание манифеста TonConnect
     location = /tonconnect-manifest.json {
