fix: Resolve Docker build and TypeScript errors
This commit addresses two issues:

1.  **TypeScript Error in LobbyRoom.ts:**
    Corrected a type mismatch in `server/src/game/rooms/LobbyRoom.ts` where `lobbySubscription` was declared as `() => void` but assigned a function `(payload: string) => void`. The type declaration has been updated to `(payload: string) => void` to match the implementation, resolving TS2322 and TS2345 errors.

2.  **Docker Build Error in client/Dockerfile:**
    Resolved the "cannot copy to non-directory" error during the frontend Docker build. This was caused by conflicts when copying the host's `node_modules` into the container.
    - Modified `client/Dockerfile` to use `COPY client/. ./client/` instead of `COPY . .` to precisely copy only the client's source code after dependencies are installed.
    - Created a root-level `.dockerignore` file to explicitly exclude `node_modules` and `dist` directories from the Docker build context, preventing conflicts.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -14,7 +14,7 @@ COPY server/package.json ./server/
 RUN pnpm install --filter client --frozen-lockfile
 
 # Copy the rest of the source code
-COPY . .
+COPY client/. ./client/
 
 # Build the client application
 RUN pnpm --filter client run build
